# llm-failure-atlas

./: .gitignore  CHANGELOG.md  LICENSE  README.md  compute_kpi.py  failure_graph.yaml  matcher.py  pattern.yaml  pyproject.toml  quickstart_demo.py  semantic_cache_intent_bleeding.yaml
.github/workflows/: ci.yml
adapters/: __init__.py  base_adapter.py  callback_handler.py  crewai_adapter.py  langchain_adapter.py  langsmith_adapter.py  redis_demo_adapter.py  redis_help_demo_adapter.py  sample_langchain_trace.json  sample_langsmith_trace.json
calibration/: run_calibration.py
docs/: adapter_formats.md  applied_debugging_examples.md  cross_model_validation.md  limitations_faq.md  operational_playbook.md  quickstart.md
evaluation/: metrics.py  mutation_eval.py  run_eval.py  sensitivity_eval.py
examples/: matcher_output.json  sample_matcher_input.json
experiments/: analyze_cache_divergence.py  experiment_scib_observation.py  experiment_scib_round2.py  redis_observation_logger.py
failures/: agent_tool_call_loop.yaml  assumption_invalidation_failure.yaml  clarification_failure.yaml  conflicting_signals.yaml  context_truncation_loss.yaml  failed_termination.yaml  incorrect_output.yaml  instruction_priority_inversion.yaml  insufficient_observability.yaml  premature_model_commitment.yaml  prompt_injection_via_retrieval.yaml  repair_strategy_failure.yaml  semantic_cache_intent_bleeding.yaml  tool_result_misinterpretation.yaml  unmodeled_failure.yaml
learning/: update_policy.py
validation/: annotation_guide.md  errors.json  run_real_eval.py
(+145 files in other folders)
